// Copyright 2017 <chaishushan{AT}gmail.com>. All rights reserved.
// Use of this source code is governed by a Apache
// license that can be found in the LICENSE file.

syntax = "proto2";

package service;

import "types.proto";
import "spec_metadata/spec.proto";

// ----------------------------------------------------------------------------
// https://docs.qingcloud.com/api/nic/index.html
// ----------------------------------------------------------------------------

service NicService {
	option (qingcloud.api.spec_metadata.service_option) = {
		external_docs: {
			url: "https://docs.qingcloud.com/api/nic/index.html"
		}
	};

	rpc CreateNics(CreateNicsInput) returns (CreateNicsOutput);
	rpc DescribeNics(DescribeNicsInput) returns (DescribeNicsOutput);
	rpc AttachNics(AttachNicsInput) returns (AttachNicsOutput);
	rpc DetachNics(DetachNicsInput) returns (DetachNicsOutput);
	rpc ModifyNicAttributes(ModifyNicAttributesInput) returns (ModifyNicAttributesOutput);
	rpc DeleteNics(DeleteNicsInput) returns (DeleteNicsOutput);
}

// ----------------------------------------------------------------------------

message CreateNicsInput {
	optional string vxnet = 1;
	optional string nic_name = 2;
	optional int32 count = 3;
	repeated string private_ips = 4;
}
message CreateNicsOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	repeated NICIP nics = 4;
}

// ----------------------------------------------------------------------------
// https://docs.qingcloud.com/api/nic/describe_nics.html
// ----------------------------------------------------------------------------

message DescribeNicsInput {
	repeated string instances = 1;
	optional int32 limit = 2;
	optional string nic_name = 3;
	repeated string nics = 4;
	optional int32 offset = 5;
	optional string status = 6;
	optional int32 vxnet_type = 7;
	repeated string vxnets = 8;
}
message DescribeNicsOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	repeated NIC nic_set = 4;
	optional int32 total_count = 5;
}

// ----------------------------------------------------------------------------

message AttachNicsInput {
	repeated string nics = 1;
	optional string instance = 2;
}

message AttachNicsOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	optional string job_id = 4;
}

// ----------------------------------------------------------------------------

message DetachNicsInput {
	repeated string nics = 1;
}
message DetachNicsOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;

	optional string job_id = 4;
}

// ----------------------------------------------------------------------------

message ModifyNicAttributesInput {
	optional string nic = 1;
	optional string nic_name = 2;
	optional string private_ip = 3;
}
message ModifyNicAttributesOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;
}

// ----------------------------------------------------------------------------

message DeleteNicsInput {
	repeated string nics = 1;
}

message DeleteNicsOutput {
	optional string action = 1;
	optional int32 ret_code = 2;
	optional string message = 3;
}

// ----------------------------------------------------------------------------
// END
// ----------------------------------------------------------------------------
